crates/rome_js_formatter/tests/specs/prettier/typescript/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractUsingAbstractMethods2.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 119
expression: classAbstractUsingAbstractMethods2.ts

---
# Input
```js
class A {
    abstract foo();
}

class B extends A  {}

abstract class C extends A {}

class D extends A {
    foo() {}
}

abstract class E extends A {
    foo() {}
}

abstract class AA {
    abstract foo();
}

class BB extends AA  {}

abstract class CC extends AA {}

class DD extends AA {
    foo() {}
}
```

# Output
```js
class A {
  abstract foo();
}

class B extends A {}

abstract class C extends A {}

class D extends A {
  foo() {}
}

abstract class E extends A {
  foo() {}
}

abstract class AA {
  abstract foo();
}

class BB extends AA {}

abstract class CC extends AA {}

class DD extends AA {
  foo() {}
}

```

# Errors
```
error[SyntaxError]: Only abstract classes can have abstract members
  ┌─ classAbstractUsingAbstractMethods2.ts:2:5
  │
2 │     abstract foo();
  │     ^^^^^^^^


```


